--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap');
+
+.resume_button {
+    border: 1px solid black;
+}
+
+header li.menu__logo {
+    padding-right: 52rem;
+    font-family: 'Alex Brush', cursive;
+    font-size: 4rem;
+    font-weight: bolder;
+}
 
 .contactus-detail {
     font-size: 21px;
@@ -8,7 +20,7 @@
 }
 
 .face-img {
-    width: 24%;
+    width: 33%;
     margin: auto;
     transition: transform .2s;
     filter: drop-shadow(0 4px 4px rgba(0,0,0,.25));
@@ -17,8 +29,11 @@
 }
 
 .img-resume {
-    display: flex;
-    align-items: center;
+    /* display: flex;
+    align-items: center; */
+    position: absolute;
+    top: 19%;
+    right: -41%;
 }
 
 body {
@@ -91,34 +106,45 @@ header ul {
     display: inline-block;
     background: #fff;
     text-align: center;
-    padding: 10px;
-    margin: 0;
+    margin: 0px;
     border-bottom-right-radius: 4px;
-    border-bottom-left-radius: 4px
+    border-bottom-left-radius: 4px;
+    width: 100%;
 }
+
 
 header li {
     display: inline-block
 }
-
 header a {
     display: block;
-    color: #3498db;
-    padding: 10px
+    /* color: #3498db; */
+    color: #004f83;
+    margin: 10px
 }
 
 header a:hover {
-    color: #217dbb;
+    color: darkblue;
     text-decoration: none;
     background: #eee;
-    border-radius: 4px
+    border-radius: 4px;
+    padding: 10px;
+    box-shadow: 3px 3px 3px darkblue;
+}
+
+.menu__logo a:hover, .resume_button a:hover {
+    color: #004f83;
+    text-decoration: none;
+    background: white;
+    border-radius: 0px;
+    padding: 0px;
+    box-shadow: none;
 }
 
 header a:focus {
-    color: #3498db;
+    color: #004f83;
     text-decoration: none
 }
-
 header.active {
     display: block
 }
@@ -287,10 +313,11 @@ footer {
 #lead-content {
     position: absolute;
     z-index: 10;
-    top: 75%;
+    top: 40%;
     /* left: 50%; */
-    transform: translate(27%, -43%);
-    text-align: center
+    /* transform: translate(27%, -43%);*/
+    text-align: center;
+	left: 8%
 }
 
 #lead-content h1,
@@ -302,7 +329,7 @@ footer {
     color: #004f83;
     /* color: #fff; */
     font-weight: 900;
-    font-size: 5.1em;
+    font-size: 4.1em;
     text-transform: uppercase;
     letter-spacing: 0.05em;
     line-height: 0.9em
